--- a/src/app/pages/page3/page3.page.html
+++ b/src/app/pages/page3/page3.page.html
@@ -1,9 +1,11 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>page3</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-encabezado titulo="pagina 3" icono="person"></app-encabezado>
 
-<ion-content>
+<ion-content class="ion-padding">
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar class="ion-padding" color="tertiary">
+    <ion-title>Footer</ion-title>
+  </ion-toolbar>
+</ion-footer>
