--- a/src/app/pages/page4/page4.page.html
+++ b/src/app/pages/page4/page4.page.html
@@ -1,4 +1,4 @@
-<app-encabezado titulo="pagina 2" icono="list"></app-encabezado>
+<app-encabezado titulo="pagina 4" icono="alert-circle"></app-encabezado>
 
 <ion-content class="ion-padding">
 
