--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,20 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Ejemplo 1
     </ion-title>
+    <ion-icon name="menu" slot="end" class="ion-padding"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content [fullscreen]="true" class="ion-padding">
+<ion-text color="primary">
+  <h1>Pagina Home</h1>
+</ion-text>
+<ion-text >
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sodales velit non ipsum maximus pulvinar et sit amet metus. Proin vel euismod dolor, et ullamcorper mi. Vivamus vel ornare tellus. Pellentesque et nisl nec lacus fringilla finibus.</p>
+</ion-text>
+<ion-button expand="full" shape="round" routerLink='../page2'>
+  Ir a Pagina 2
+</ion-button>
+<ion-button expand="full" shape="round" routerLink='../page3' color="tertiary">
+  Ir a Pagina 3
+</ion-button>
+<ion-button expand="block" shape="round" routerLink='../page4'>
+  Ir a pagina 4
+</ion-button>
 </ion-content>
+
+<ion-footer >
+  <ion-toolbar >
+    <ion-text class="ion-padding">
+      <p>Awesome text</p>
+    </ion-text>
+  </ion-toolbar>
+</ion-footer>
