--- a/src/app/pages/page4/page4.page.html
+++ b/src/app/pages/page4/page4.page.html
@@ -3,9 +3,4 @@
 <ion-content class="ion-padding">
 
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar class="ion-padding" color="tertiary">
-    <ion-title>Footer</ion-title>
-  </ion-toolbar>
-</ion-footer>
+<app-footer></app-footer>
