--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,31 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu-toggle>
+    <ion-menu side="end" menuId="custom" contentId="main" class="my-custom-menu">
+      <ion-header>
+        <ion-toolbar color="tertiary">
+          <ion-title>Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-item slot="end" routerLink='../home'>
+            Home
+          </ion-item>
+          <ion-item routerLink='../page2'>
+            List
+            <ion-icon slot="end" name="list" ></ion-icon>
+          </ion-item>
+          <ion-item icono='person' routerLink='../page3'>
+            Person
+          </ion-item>
+          <ion-item icono='alert-circle' routerLink='../page4'>
+            Notification
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+  </ion-menu-toggle>
+  
+
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
