--- a/src/app/pages/page2/page2.page.html
+++ b/src/app/pages/page2/page2.page.html
@@ -4,8 +4,4 @@
 
 </ion-content>
 
-<ion-footer>
-  <ion-toolbar class="ion-padding" color="tertiary">
-    <ion-title>Footer</ion-title>
-  </ion-toolbar>
-</ion-footer>
+<app-footer></app-footer>
