--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,20 +7,28 @@
         </ion-toolbar>
       </ion-header>
       <ion-content>
-        <ion-list>
-          <ion-item slot="end" routerLink='../home'>
-            Home
+        <ion-list lines="full" *ngFor="let item of opciones">
+
+          <ion-item [routerLink]="item.destino">
+            {{item.texto}}
+            <ion-icon slot="end" [name]="item.icono" ></ion-icon>
           </ion-item>
-          <ion-item routerLink='../page2'>
+
+          <!-- <ion-item routerLink='../page2'>
             List
             <ion-icon slot="end" name="list" ></ion-icon>
           </ion-item>
-          <ion-item icono='person' routerLink='../page3'>
+
+          <ion-item routerLink='../page3'>
             Person
+            <ion-icon slot="end" name="person" ></ion-icon>
           </ion-item>
-          <ion-item icono='alert-circle' routerLink='../page4'>
+
+          <ion-item routerLink='../page4'>
             Notification
-          </ion-item>
+            <ion-icon slot="end" name="alert-circle" ></ion-icon>
+          </ion-item> -->
+
         </ion-list>
       </ion-content>
     </ion-menu>
