elementos en paginas de 2 a 4

--- a/src/app/pages/page4/page4.page.html
+++ b/src/app/pages/page4/page4.page.html
@@ -1,6 +1,8 @@
 <app-encabezado titulo="pagina 4" icono="alert-circle"></app-encabezado>
 
 <ion-content class="ion-padding">
-
+    <ion-button (click)="presentAlert()" expand="block" fill="clear">
+        Click me
+    </ion-button>
 </ion-content>
 <app-footer></app-footer>
