--- a/src/app/pages/page2/page2.page.html
+++ b/src/app/pages/page2/page2.page.html
@@ -2,6 +2,18 @@
 
 <ion-content class="ion-padding">
 
+    <ion-list *ngFor='let p of personas; let i=index'>
+        <ion-item>
+            <ion-avatar slot="start">
+                <img [src]="p.img">
+            </ion-avatar>
+            <ion-label>
+                <H3>{{p.nombre}}</H3>
+                <p>{{p.apellido}}</p>
+            </ion-label>
+        </ion-item>
+    </ion-list>
+
 </ion-content>
 
 <app-footer></app-footer>
